# resume_generator

./: .gitignore  Cargo.toml  LICENSE  README.md  setup.sh
.github/workflows/: Build and Test.yml  Trigger Resume Render.yml
git-hooks/: pre-commit
src/: lib.rs  main.rs
src/config/: arguments.rs  format_config.rs  mod.rs
src/data/: mod.rs  parser.rs
src/renderer/: github_renderer.rs  json_renderer.rs  markdown_renderer.rs  mod.rs  pdf_renderer.rs  text_renderer.rs
src/util/: mod.rs
tst/: test_format_config.toml  test_resume.toml  test_simple_toml.toml
