[package]
name = "resume_generator"
version = "0.1.0"
authors = ["\"Spencer Ferris\" <git@spencewenski.com>"]
edition = "2018"

[dependencies]
toml = "0.5.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
clap = { version = "3", features = ["derive"] }
chrono = "0.4.*"
latex = "0.3.*"

[[bin]]
name = "resume_generator"
path = "./src/main.rs"

[lib]
name = "resume_generator"
path = "./src/lib.rs"
